docs/style.css
/*
Defaults####################################################
*/
html{
	font-family: sans-serif;
}
/*
Noscript####################################################
*/
.noscript_banner{
	position: fixed;
	display: flex;
	flex-direction: column;
	justify-content: space-around;
	bottom: 0px;
	left: 0px;
	width:100vw;
	min-height:30px;
	background-color: rgba(0,0,0,0.7);
}
.noscript_banner h1{
	color:#eeeeee;
	display:block;
	text-align:center;
	font-size:20pt;
}
/*
nav####################################################
*/
nav{
	width:100vw;
	position: fixed;
	top: 0px;
	left: 0px;
	background-color: #ffffff;
	box-shadow: 0px -5px 20px;

}
nav .navinner{
	display: flex;
	justify-content: space-around;

}
nav .navinner .navlink{
	text-decoration: none;
	background-color: #eeeeee;
	color:#000000;
	border-width: 1px;
	border-color: transparent;
	box-shadow: 0px 0px 0px 1px;
	border-style: solid solid solid solid;
	border-radius: 0px 0px 0px 0px;
	font-size: 12pt;
	line-height: 30px;
	flex:1;
	z-index:1;
	text-align: center;
}
nav .navinner .navlink:hover{
	box-shadow: 0px 0px 1px 2px;
	z-index:2;
}
nav .navinner .navlink_s{
	background-color: #ffffff;
}
.navspacer{
	margin-top:50px;
	transition: margin-top 0.5s;
}

@media screen and (min-width: 700pt){
	nav{
	width: 80pt;
	position: fixed;
	top: 0px;
	left: 620pt;
	box-shadow: 0px 0px 3px 1px;
	}
	nav .navinner{
	flex-direction:column;}
	.navspacer{	margin-top:0px;	}
}
/*
PageHead####################################################
*/
.page_head{
	display: flex;	
	text-align: left;
	flex-wrap: wrap;
	flex-direction: column;
	align-items: center;
}
.page_head h1{
	margin: 10px
}
.page_head h2{
	font-size: 12pt;
	font-weight: normal;
	font-style: italic;
	color:#666666;
	margin: 5px
}
@media screen and (min-width: 600px){
	.page_head{flex-direction:row;align-items: baseline;}
}
/*
PageFooter####################################################
*/
.page_footer{
	font-size:10pt;
	margin:50px 5px;
	color:#cccccc;
}
/*
Rulebox####################################################
*/
.rulebox{
	color:#000000;
	border: 2px solid black;
	border-radius: 20px;	
	width: 90vw;
	font-size: 10pt;
	max-width: 600pt;
	margin:5px;	
	
}

.rules_list{
	display: flex;	
	flex-direction: column;
	align-items: center;
}
@media screen and (min-width: 600px){
	.rules_list{align-items: flex-start;}
}
.rulebox h1{
	font-size: 15pt;
	margin: 10px;
	overflow: hidden;
	text-overflow: ellipsis;
	font-family: serif;
}
.rulebox .subhead, .pobox .subhead{
	color:#666666;
	font-size: 10pt;
	margin: 0 10px 10px 10px;
	font-style: italic;
	overflow: hidden;
	text-overflow: ellipsis;
	
}
.rulebox .rulehead, .pobox .pohead {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	align-items: baseline;
	background-color:#eeeeee;
	border-radius: 20px 20px 0 0;
	overflow: hidden;
}
.rulebox .detail_link {
	font-size: 10pt;
	color:#666666;
}
.rulebox .rulebody, .pobox .pobody {
	text-align: left;
	font-size: 12pt;
	margin: 10px;
	overflow: hidden;
	text-overflow: ellipsis;
	font-family: serif;
}
.rulebox .rulefooter{
	text-align: left;
	font-size: 10pt;
	background-color:#eeeeee;
	border-radius: 0px 0px 20px 20px;
	overflow: hidden;
	text-overflow: ellipsis;
	padding: 10px;
}
.rulebox .rulefooter .cf, .pobox  .cf{
	font-size: 10pt;
}
.rulebox .rulefooter .footnote{
	overflow: hidden;
	text-overflow: ellipsis;
	margin-top: 5px;
	color:#888888;
}
.rulebox .rulefooter .footnote .attrib{
	font-size: 8pt;
	font-style: italic;
}
.rulebox .rulefooter ul{
	padding: 0px;
	margin:0px;	
	list-style-type: none;
}

/*
Rulebox_repealed####################################################
*/
.repealed_heading{
	margin: 10px;
	font-size: 17pt;
}

.rules_list_repealed .rulebox, .rulebox_repealed{
	color:#444444;
	border: 1px solid #444444;
	background-color:#dddddd;	
}

.rules_list_repealed  .rulebox .subhead{
	color:#666666;	
}
.rules_list_repealed  .rulebox .rulehead{
	background-color:#eeeeee;
}
.rules_list_repealed  .rulebox .rulefooter{
	background-color:inherit;
}
.rules_list_repealed  .rulebox .rulefooter .footnote{
	color:#888888;
}

/*
PObox####################################################
*/
.pobox h1{
	font-size: 15pt;
	margin: 5px 10px 5px 10px;
	overflow: hidden;
	text-overflow: ellipsis;
	font-family: serif;
}

.pobox{
	color:#000000;
	border: 1px solid black;
	border-radius: 0px;	
	width: 90vw;
	font-size: 10pt;
	max-width: 600pt;
	margin:5px;	
	
}
.pobox .pohead {
	margin: 0 0px 0 0px;
	border-radius: 0px 0px 0 0;
}
.pobox .pobody {
	margin: 0 8px 0 8px;
}
.pobox .pobody p{
	margin: 5px 0px 10px 0px;
}
.pobox .subhead{
	color:#666666;
	font-size: 10pt;
	margin: 0 10px 0px 10px;
	font-style: italic;
	overflow: hidden;
	text-overflow: ellipsis;
	
}
.pobox .footer{
	text-align: left;
	font-size: 10pt;
	background-color:#eeeeee;
	overflow: hidden;
	text-overflow: ellipsis;
	padding: 5px 10px;
}
.pobox .footer .footnote{
	overflow: hidden;
	text-overflow: ellipsis;
	margin-top: 5px;
	color:#888888;
}
.pobox .footer .footnote .attrib{
	font-size: 8pt;
	font-style: italic;
}
.pobox .footer ul{
	padding: 0px;
	margin:0px;	
	list-style-type: none;
}

.pobox .jdgmt_list{
	border-style: dashed none none none;
	border-width: 1px;
}

/*
jdgmtbox####################################################
*/
.jdgmtbox{
	color:#000000;
	font-size: 10pt;
	max-width: 600pt;
	margin:5px;	
	
}
.jdgmtbox h1{
	font-size: 10pt;
	margin: 5px 10px 5px 5px;
	font-weight:normal;
	overflow: hidden;
	text-overflow: ellipsis;
	font-family: serif;
}
.jdgmtbox .subhead{
	color:#666666;
	font-size: 10pt;
	margin: 0 10px 0px 10px;
	font-style: italic;
	overflow: hidden;
	text-overflow: ellipsis;
	
}
.jdgmtbox .jdgmthead {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	align-items: baseline;
	border-radius: 0px;
	overflow: hidden;
}
.jdgmtbox .jdgmtbody{
	text-align: left;
	font-size: 12pt;
	margin: 0 10px 0 10px;
	overflow: hidden;
	text-overflow: ellipsis;
	font-family: serif;
}
.jdgmtbox .jdgmtbody p{
	margin: 5px 5px 10px 1em;
}
.jdgmtbox .footer{
	text-align: left;
	font-size: 10pt;
	background-color:transparent;
	overflow: hidden;
	text-overflow: ellipsis;
	margin: 0 10px 0 2em;
}
.jdgmtbox .footer .cf{
	font-size: 10pt;
}
.jdgmtbox .footer .footnote{
	overflow: hidden;
	text-overflow: ellipsis;
	margin-top: 5px;
	color:#888888;
}
.jdgmtbox .footer .footnote .attrib{
	font-size: 8pt;
	font-style: italic;
}
.jdgmtbox .footer ul{
	padding: 0px;
	margin:0px;
	list-style-type: circle;
	
}
/*
disputed jdgmtbox####################################################
*/
.jdgmtdisp .jdgmtbody{
	color:#dd0000;
}

/*
days####################################################
*/
#days_list h2{
	font-size: 15pt;
	font-weight: bold;
	margin: 10px
}
.daybox{
	color:#000000;
	border: 2px solid black;
	border-radius: 10px;	
	width: 90vw;
	font-size: 10pt;
	max-width: 600pt;	
	
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	align-items: stretch;
	background-color:#eeeeee;
	overflow: hidden;
	
	font-size: 15pt;
	margin: 10px;
	text-overflow: ellipsis;
}

.daybox a{
	text-decoration: none;
	padding:10px;
	flex-grow:1;
}

